# work-daily-report

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.daily-report-data/: .schedule_state.json
.github/workflows/: release.yml
cli/: __init__.py  export.py  git_parser.py  llm_summary.py  main.py  models.py  report_generator.py  scheduler.py  storage.py  utils.py
templates/: daily-dingtalk.md.j2  daily-feishu.md.j2  daily.md.j2  weekly.md.j2
tests/: test_export.py  test_llm.py  test_models.py  test_report_generator.py  test_scheduler.py  test_storage.py
vscode-extension/: .vscodeignore  package-lock.json  package.json
vscode-extension/src/: extension.ts
