[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-report"
version = "0.2.0"
description = "基于 Git 提交记录自动生成工作日报/周报的 CLI 工具 —— 支持多仓库扫描、LLM 智能总结、多平台模板导出、VSCode 扩展、定时调度与断点追赶"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "kaixuancao"}
]
keywords = ["daily-report", "weekly-report", "git", "vscode", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Office/Business",
]
dependencies = [
    "click>=8.0",
    "GitPython>=3.1",
    "Jinja2>=3.0",
    "python-dateutil>=2.8",
    "pyperclip>=1.8",
]

[project.scripts]
daily-report = "cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[tool.setuptools.packages.find]
include = ["cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
